objects/Contact.object
<CustomObject>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <label>Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Secondary</fullName>
                </value>
                <value>
                    <fullName>Tertiary</fullName>
                </value>
                <value>
                    <fullName>Primary</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BirthDate__c</fullName>
        <label>BirthDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Languages__c</fullName>
        <label>Languages</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Formula__c</fullName>
        <formula>CreatedDate - 3</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date Formula</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BirthdayisToday__c</fullName>
        <formula>IF(
AND(
DAY(TODAY()) =  DAY(BirthDate__c ),
MONTH(TODAY()) = MONTH(BirthDate__c )
),
TRUE,
FALSE
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BirthdayisToday</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>